force-app/main/default/objects/New_Customer__c/New_Customer__c.object-meta.xml
<CustomObject>
    <label>New Customer</label>
    <nameField>
        <label>New Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>New Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>