force-app/main/default/objects/New_Customer__c/fields/Account_number__c.field-meta.xml
<CustomField>
    <fullName>Account_number__c</fullName>
    <label>Account number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>