force-app/main/default/objects/New_Customer__c/fields/Adhar_No__c.field-meta.xml
<CustomField>
    <fullName>Adhar_No__c</fullName>
    <label>Adhar No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>