force-app/main/default/objects/New_Customer__c/fields/Costumer_ID__c.field-meta.xml
<CustomField>
    <fullName>Costumer_ID__c</fullName>
    <label>Costumer ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>