force-app/main/default/objects/New_Customer__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>Loan__c.Amount__c</summarizedField>
    <summaryForeignKey>Loan__c.New_Customer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>