force-app/main/default/objects/New_Customer__c/validationRules/AdharNoValid.validationRule-meta.xml
<ValidationRule>
    <fullName>AdharNoValid</fullName>
    <active>true</active>
    <errorConditionFormula>(LEN(TEXT( Adhar_No__c )) &lt;&gt; 16) &amp;&amp;   NOT(ISBLANK( Adhar_No__c ))</errorConditionFormula>
    <errorMessage>Enter valid no</errorMessage>
</ValidationRule>